syntax = "proto3";

package pb;

option optimize_for = SPEED;
option java_multiple_files = true;
option java_package = "io.yottachain.p2phost.pb";
option java_outer_classname = "P2PHostProto";

// p2p micro-servicew
service P2PHost {
    rpc ID (Empty) returns (StringMsg) {}
    rpc Addrs(Empty) returns (StringListMsg) {}
    rpc Connect(ConnectReq) returns (Empty) {}
    rpc DisConnect(StringMsg) returns (Empty) {}
    rpc SendMsg(SendMsgReq) returns (SendMsgResp) {}
    rpc RegisterHandler(StringMsg) returns (Empty) {}
    rpc UnregisterHandler(StringMsg) returns (Empty) {}
    rpc Close(Empty) returns (Empty) {}
}

// empty message
message Empty {
}

// message that only contains a value of string
message StringMsg {
    string value = 1;
}

// message that contains a list of string
message StringListMsg {
    repeated string values = 1;
}

// Connect request message 
message ConnectReq {
    string id = 1;
    repeated string addrs = 2;
}

// SendMsg request message
message SendMsgReq {
    string id = 1;
    bytes msgType = 2;
    bytes msg = 3;
}

// SendMsg response message
message SendMsgResp {
    bytes value = 1;
}